@@ -2,8 +2,15 @@
 *** HYBRID CHANGELOG
 *** Newest entries at top
 
+version hybrid-6-b51   3-Mar-1999
+* was using idented username instead of ~ name for unidented clients
+  for tklines caused weird bug
+* had BUFSIZ instead of BUFSIZE in strncpy() in s_serv.c broke m_unkline
+-Dianora
+	
 version hybrid-6-b50   24-Feb-1999
 * report_specials was showing aconf->host not aconf->user
+* return ERR_TOOMANYTARGETS if privmsg is used with multiple targets	
 -Dianora
 	
 version hybrid-6-b49   19-Feb-1999
